@@ -1,7 +1,7 @@
 package com.consubanco.model.entities.file.util;
 
-import com.consubanco.model.commons.exception.factory.ExceptionFactory;
 import com.consubanco.model.entities.agreement.vo.AttachmentConfigVO;
+import com.consubanco.model.entities.file.vo.AttachmentFileVO;
 import com.consubanco.model.entities.file.vo.FileUploadVO;
 import lombok.experimental.UtilityClass;
 import reactor.core.publisher.Flux;
@@ -13,40 +13,44 @@ import java.util.stream.Collectors;
 import static com.consubanco.model.commons.exception.factory.ExceptionFactory.buildBusiness;
 import static com.consubanco.model.commons.exception.factory.ExceptionFactory.monoBusiness;
 import static com.consubanco.model.entities.file.message.FileBusinessMessage.*;
-import static com.consubanco.model.entities.file.message.FileMessage.maxSize;
+import static com.consubanco.model.entities.file.message.FileMessage.*;
 
 @UtilityClass
 public class AttachmentValidatorUtil {
 
-    private static final String DELIMITER = ", ";
-
-    public Mono<Void> checkAttachmentsSize(List<FileUploadVO> attachments, Double maxSizeAllowed) {
-        return Flux.fromIterable(attachments)
-                .filter(fileUploadVO -> fileUploadVO.getSizeInMB() > maxSizeAllowed)
+    public Mono<Void> checkAttachmentsSize(List<AttachmentFileVO> attachments, Double sizeAllowed) {
+        return flattenAttachmentFiles(attachments)
+                .filter(fileUploadVO -> fileUploadVO.getSizeInMB() > sizeAllowed)
                 .map(FileUploadVO::getName)
                 .collectList()
                 .filter(list -> !list.isEmpty())
-                .map(list -> {
-                    throw ExceptionFactory.buildBusiness((String.join(", ", list)), ATTACHMENT_INVALID_SIZE);
-                })
+                .handle((list, sink) -> sink.error(buildBusiness(filesExceedSize(list, sizeAllowed), ATTACHMENT_INVALID_SIZE)))
                 .then();
     }
 
-    public Mono<List<FileUploadVO>> checkAttachments(List<AttachmentConfigVO> attachmentsByAgreement,
-                                                     List<FileUploadVO> attachmentsProvided,
-                                                     List<String> attachmentsInStorage) {
+    public Mono<List<AttachmentFileVO>> checkAttachments(List<AttachmentConfigVO> attachmentsByAgreement,
+                                                         List<AttachmentFileVO> attachmentsProvided,
+                                                         List<String> attachmentsInStorage) {
         List<String> attachmentNamesByAgreement = attachmentNames(attachmentsByAgreement);
-        List<FileUploadVO> filteredAttachments = filteredAttachments(attachmentNamesByAgreement, attachmentsProvided);
+        List<AttachmentFileVO> filteredAttachments = filteredAttachments(attachmentNamesByAgreement, attachmentsProvided);
         List<String> providedAttachmentNames = providedAttachmentNames(filteredAttachments);
         return checkRequiredAttachments(attachmentsByAgreement, providedAttachmentNames, attachmentsInStorage)
                 .then(checkValidTypes(filteredAttachments, attachmentsByAgreement))
+                .then(checkNumberFilesByAttachment(filteredAttachments, attachmentsByAgreement))
                 .thenReturn(filteredAttachments);
     }
 
-    public Mono<FileUploadVO> checkFileSize(FileUploadVO vo, Double  maxSizeAllowed) {
+    public Mono<FileUploadVO> checkFileSize(FileUploadVO vo, Double maxSizeAllowed) {
         if (vo.getSizeInMB() <= 0) return buildBusiness(MIN_INVALID_SIZE);
-        if (vo.getSizeInMB() > maxSizeAllowed ) return monoBusiness(ATTACHMENT_INVALID_SIZE, maxSize(maxSizeAllowed));
+        if (vo.getSizeInMB() > maxSizeAllowed) return monoBusiness(ATTACHMENT_INVALID_SIZE, maxSize(maxSizeAllowed));
         return Mono.just(vo);
+    }
+
+    private Flux<FileUploadVO> flattenAttachmentFiles(List<AttachmentFileVO> attachments) {
+        List<FileUploadVO> list = attachments.stream()
+                .flatMap(attachmentFileVO -> attachmentFileVO.getFiles().stream())
+                .toList();
+        return Flux.fromIterable(list);
     }
 
     private List<String> attachmentNames(List<AttachmentConfigVO> attachmentsByAgreement) {
@@ -55,16 +59,16 @@ public class AttachmentValidatorUtil {
                 .collect(Collectors.toList());
     }
 
-    private List<FileUploadVO> filteredAttachments(List<String> requiredAttachmentNames,
-                                                   List<FileUploadVO> attachmentsProvided) {
+    private List<AttachmentFileVO> filteredAttachments(List<String> requiredAttachmentNames,
+                                                       List<AttachmentFileVO> attachmentsProvided) {
         return attachmentsProvided.stream()
-                .filter(uploadVO -> requiredAttachmentNames.contains(uploadVO.getName()))
-                .collect(Collectors.toList());
+                .filter(attachmentFileVO -> requiredAttachmentNames.contains(attachmentFileVO.getName()))
+                .toList();
     }
 
-    private List<String> providedAttachmentNames(List<FileUploadVO> attachmentsProvided) {
+    private List<String> providedAttachmentNames(List<AttachmentFileVO> attachmentsProvided) {
         return attachmentsProvided.stream()
-                .map(FileUploadVO::getName)
+                .map(AttachmentFileVO::getName)
                 .collect(Collectors.toList());
     }
 
@@ -77,35 +81,55 @@ public class AttachmentValidatorUtil {
                 .filter(attachment -> !attachmentsProvided.contains(attachment) && !attachmentsInStorage.contains(attachment))
                 .collectList()
                 .filter(list -> !list.isEmpty())
-                .map(list -> {
-                    throw ExceptionFactory.buildBusiness((String.join(DELIMITER, list)), MISSING_ATTACHMENT);
-                })
+                .handle((list, sink) -> sink.error(buildBusiness(attachmentRequired(list), MISSING_ATTACHMENT)))
                 .then();
     }
 
-    private Mono<Void> checkValidTypes(List<FileUploadVO> attachmentsProvided,
+    private Mono<Void> checkValidTypes(List<AttachmentFileVO> attachmentsProvided,
                                        List<AttachmentConfigVO> attachmentsByAgreement) {
         return Flux.fromIterable(attachmentsProvided)
-                .filter(fileUploadVO -> {
-                    List<String> validTypes = getValidTypesByFile(attachmentsByAgreement, fileUploadVO);
-                    return !validTypes.contains(fileUploadVO.getExtension().toLowerCase());
-                })
-                .map(FileUploadVO::getName)
+                .flatMap(attachmentFileVO -> checkAttachmentFileTypes(attachmentsByAgreement, attachmentFileVO))
                 .collectList()
                 .filter(list -> !list.isEmpty())
-                .map(list -> {
-                    throw ExceptionFactory.buildBusiness((String.join(", ", list)), ATTACHMENT_INVALID_TYPE);
-                })
+                .handle((list, sink) -> sink.error(buildBusiness(filesInvalidTypes(list), ATTACHMENT_INVALID_TYPE)))
                 .then();
 
     }
 
-    private List<String> getValidTypesByFile(List<AttachmentConfigVO> attachmentsByAgreement, FileUploadVO fileUpload) {
+    private static Flux<String> checkAttachmentFileTypes(List<AttachmentConfigVO> attachmentsByAgreement,
+                                                         AttachmentFileVO attachmentFileVO) {
+        List<String> validTypes = getValidTypesByFile(attachmentsByAgreement, attachmentFileVO);
+        return Flux.fromIterable(attachmentFileVO.getFiles())
+                .filter(fileUploadVO -> !validTypes.contains(fileUploadVO.getExtension().toLowerCase()))
+                .map(FileUploadVO::getName);
+    }
+
+    private List<String> getValidTypesByFile(List<AttachmentConfigVO> attachmentsByAgreement, AttachmentFileVO attach) {
         return attachmentsByAgreement.stream()
-                .filter(attachment -> attachment.getTechnicalName().equalsIgnoreCase(fileUpload.getName()))
+                .filter(attachment -> attachment.getTechnicalName().equalsIgnoreCase(attach.getName()))
                 .flatMap(attachment -> attachment.getTypeFile().stream())
                 .map(String::toLowerCase)
                 .toList();
+    }
+
+    private Mono<Void> checkNumberFilesByAttachment(List<AttachmentFileVO> attachmentsProvided,
+                                                    List<AttachmentConfigVO> attachmentsByAgreement) {
+        return Flux.fromIterable(attachmentsProvided)
+                .filter(attachmentFileVO -> isNumberOfFilesExceeded(attachmentsByAgreement, attachmentFileVO))
+                .map(AttachmentFileVO::getName)
+                .collectList()
+                .filter(list -> !list.isEmpty())
+                .handle((list, sink) -> sink.error(buildBusiness(attachmentExceeded(list), ATTACHMENT_EXCEEDED)))
+                .then();
+    }
+
+    private Boolean isNumberOfFilesExceeded(List<AttachmentConfigVO> attachmentsByAgreement,
+                                            AttachmentFileVO attachmentFileVO) {
+        return attachmentsByAgreement.stream()
+                .filter(config -> config.getTechnicalName().equalsIgnoreCase(attachmentFileVO.getName()))
+                .findFirst()
+                .map(config -> attachmentFileVO.getFiles().size() > config.getMaxFiles())
+                .orElse(false);
     }
 
 }
